# light-fabric

./: .gitignore  Cargo.toml  README.md  release.sh  src_diff.patch  test_load.rs
apps/light-agent/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  docker-compose.yml  run-account.sh  run-advisor.sh  run-local.sh  run-techspt.sh
apps/light-agent-channel/: Cargo.toml  README.md
apps/light-agent-channel/config/: connector-credentials.example.json
apps/light-agent-channel/src/: credential.rs  lib.rs  main.rs
apps/light-agent-worker/: Cargo.toml
apps/light-agent-worker/src/: lib.rs  main.rs
apps/light-agent/config/: anthropic.yml  azure-openai.yml  bedrock.yml  ca.pem  claude-code.yml  client.yml  codex.yml  compatible.yml  copilot.yml  gemini-cli.yml  gemini.yml  glm.yml  kilo-cli.yml  llm-gateway-client.yml  mcp-client.yml  model-provider.yml  ollama.yml  openai.yml  openrouter.yml  portal-registry.yml  security.yml  server.yml  startup.yml  telnyx.yml  values.yml
apps/light-agent/docker/: Dockerfile
apps/light-agent/public/: index.html
apps/light-agent/src/: domain.rs  governed_model.rs  lib.rs  main.rs  skill_packages.rs
apps/light-coding-agent-fixture/: Cargo.toml  Dockerfile.cube  README.md
apps/light-coding-agent-fixture/src/: main.rs
apps/light-deployer/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  run.sh
apps/light-deployer/config/: deployer.yml  portal-registry.yml  server.yml  startup.yml
apps/light-deployer/k8s/: deployment.yaml  namespace.yaml  rbac.yaml  service.yaml
apps/light-deployer/src/: api.rs  config.rs  deployer.rs  events.rs  git.rs  kube.rs  main.rs  model.rs  policy.rs  prune.rs  renderer.rs
apps/light-gateway/: .gitignore  Cargo.toml  README.md  build.sh  docker-compose.yml  light-gateway.env.example  run.sh
apps/light-gateway/config/: access-control.yml  apikey.yml  basic-auth.yml  client.yml  correlation.yml  cors.yml  direct-registry.yml  gateway.yml  handler.yml  header.yml  limit.yml  llm-router.yml  mcp-router.yml  metrics.yml  msal-auth.yml  msal-exchange.yml  path-resource.yml  pathPrefixService.yml  pii-tokenization.yml  proxy.yml  router.yml  rule.yml  security-msal.yml  security.yml  server.yml  sidecar.yml  startup.yml  statelessAuth.yml  token.yml  unified-security.yml  values.yml  virtual-host.yml  websocket-router.yml
apps/light-gateway/docker/: Dockerfile
apps/light-gateway/src/: main.rs
apps/light-github-action-provider/: Cargo.toml  README.md
apps/light-github-action-provider/src/: main.rs
apps/light-pi-rpc-adapter/: Cargo.toml  Dockerfile.cube  README.md
apps/light-pi-rpc-adapter/src/: main.rs
apps/light-workflow/: Cargo.toml  README.md  build.sh  run.sh
apps/light-workflow-runner/: Cargo.toml  README.md
apps/light-workflow-runner/config/: runner.cube.example.yml  runner.docker.example.yml  runner.example.yml  runner.mock.yml  runner.rootless-oci.example.yml
apps/light-workflow-runner/docker/: Dockerfile
apps/light-workflow-runner/k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.example.yaml  service.yaml
apps/light-workflow-runner/src/: broker.rs  configuration.rs  health.rs  journal.rs  lib.rs  main.rs  normalization.rs  staging.rs  supervisor.rs  transport.rs  worker_process.rs
apps/light-workflow-runner/tests/: controller_cube_full_stack.rs  transport_websocket.rs
apps/light-workflow/config/: runner-execution.mock.yml
apps/light-workflow/docker/: Dockerfile
apps/light-workflow/examples/: README.md  agent-catalog-events.json  agent-json-output.yaml  http-risk-decision.yaml  human-approval.yaml  insurance-claim-demo-curl.sh  insurance-claim-demo-queries.sql  insurance-claim-demo-reset.sh  insurance-claim-demo-reset.sql  insurance-claim-demo.postman_collection.json  insurance-claim-headless-regression-cases.json  insurance-claim-headless-v1.yaml  insurance-claim-mcp-v1.yaml  insurance-claim-rest-v1.yaml  personalized-offer-mcp-v1.yaml  personalized-offer-rest-v1.yaml  run-shell-mock-v1.yaml  simple-set-assert.yaml
apps/light-workflow/src/: agent_job.rs  approval.rs  artifact_publish.rs  artifact_retention.rs  artifact_store.rs  command_template.rs  configuration.rs  consumer.rs  events.rs  executor.rs  fixed_action.rs  lease_reaper.rs  lib.rs  main.rs  provenance.rs  repositories.rs  result_reconciler.rs  rule_api.rs  runner_scheduler.rs  session_reconciler.rs
apps/light-workflow/tests/: example_workflows.rs  mortgage-approval-test.md  postgres_runner_integration.rs
apps/llm-phase0-spikes/: Cargo.toml
apps/llm-phase0-spikes/src/: main.rs
apps/llm-provider-mock/: Cargo.toml  Dockerfile
apps/llm-provider-mock/src/: main.rs
crates/agent-delegation/: Cargo.toml
crates/agent-delegation/src/: lib.rs
crates/agent-materializer/: Cargo.toml
crates/agent-materializer/src/: lib.rs
crates/agent-runtime-protocol/: Cargo.toml
crates/agent-runtime-protocol/src/: lib.rs
crates/coding-agent-runtime/: Cargo.toml
crates/coding-agent-runtime/src/: lib.rs
crates/config-loader/: Cargo.toml
crates/config-loader/src/: lib.rs
crates/controller-wire/: Cargo.toml  README.md  rkyv-v1.profile
crates/controller-wire/fixtures/: runtime-rkyv-v1.hex
crates/controller-wire/src/: codec.rs  error.rs  frame.rs  json.rs  lib.rs  profile.rs  v1.rs
crates/controller-wire/tests/: conformance.rs  security_fuzz.rs
crates/execution-backend/: Cargo.toml
crates/execution-backend-cube/: Cargo.toml
crates/execution-backend-cube/src/: http.rs  lib.rs
crates/execution-backend-cube/tests/: cube_coding_live.rs  cube_failure_matrix_live.rs
crates/execution-backend-mock/: Cargo.toml
crates/execution-backend-mock/src/: lib.rs
crates/execution-backend/src/: lib.rs
crates/execution-runner-protocol/: Cargo.toml
crates/execution-runner-protocol/src/: lib.rs
crates/hindsight-client/: Cargo.toml
crates/light-client/: Cargo.toml
crates/light-rule/: Cargo.toml  README.md
crates/light-runtime/: Cargo.toml
crates/light-security/: Cargo.toml
crates/llm-gateway/: Cargo.toml
crates/mcp-client/: Cargo.toml
docs/: book.toml
(+456 files in other folders)
