[workspace]
members = [
    "crates/*",
    "frameworks/*",
    "apps/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Steve Hu <stevehu@gmail.com>"]
description = "Light-Fabric platform for enterprise AI services"
repository = "https://github.com/networknt/light-fabric"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
futures = "0.3"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
hmac = "0.12"
hex = "0.4"
parking_lot = "0.12"
