[package]
name="light-agent-channel"
version.workspace=true
edition.workspace=true
license.workspace=true
[dependencies]
chrono.workspace=true
hmac.workspace=true
sha2.workspace=true
serde.workspace=true
serde_json.workspace=true
thiserror.workspace=true
uuid.workspace=true
axum.workspace=true
tokio.workspace=true
sqlx={version="0.8",features=["chrono","json","postgres","runtime-tokio-rustls","uuid"]}
reqwest.workspace=true
anyhow.workspace=true
hex.workspace=true
light-agent={path="../light-agent"}
agent-core={path="../../crates/agent-core"}
tracing.workspace=true
tracing-subscriber.workspace=true
