[package]
name = "light-agent-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../../crates/agent-core" }
agent-runtime-protocol = { path = "../../crates/agent-runtime-protocol" }
anyhow = { workspace = true }
chrono = { workspace = true }
execution-runner-protocol = { path = "../../crates/execution-runner-protocol" }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
