[package]
name = "light-agent"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
light-runtime = { path = "../../crates/light-runtime" }
light-axum = { path = "../../frameworks/light-axum" }
config-loader = { path = "../../crates/config-loader" }
model-provider = { path = "../../crates/model-provider" }
mcp-client = { path = "../../crates/mcp-client" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tower-http = { version = "0.6", features = ["fs"] }
hindsight-client = { path = "../../crates/hindsight-client" }
portal-registry = { path = "../../crates/portal-registry" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
async-trait = "0.1"
