[package]
name = "light-agent"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
light-runtime = { path = "../../crates/light-runtime" }
light-client = { path = "../../crates/light-client" }
light-axum = { path = "../../frameworks/light-axum" }
light-security = { path = "../../crates/light-security" }
model-provider = { path = "../../crates/model-provider" }
mcp-client = { path = "../../crates/mcp-client" }
config-loader = { path = "../../crates/config-loader" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tower-http = { version = "0.6", features = ["fs"] }
hindsight-client = { path = "../../crates/hindsight-client" }
portal-registry = { path = "../../crates/portal-registry" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
async-trait = "0.1"

[build-dependencies]
config-embed-build = { path = "../../crates/config-embed-build" }
