[package]
name = "light-agent"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
agent-core = { path = "../../crates/agent-core" }
agent-delegation = { path = "../../crates/agent-delegation" }
agent-runtime-protocol = { path = "../../crates/agent-runtime-protocol" }
agent-materializer = { path = "../../crates/agent-materializer" }
coding-agent-runtime = { path = "../../crates/coding-agent-runtime" }
execution-runner-protocol = { path = "../../crates/execution-runner-protocol" }
light-runtime = { path = "../../crates/light-runtime" }
light-client = { path = "../../crates/light-client" }
light-axum = { path = "../../frameworks/light-axum" }
light-security = { path = "../../crates/light-security" }
model-provider = { path = "../../crates/model-provider" }
mcp-client = { path = "../../crates/mcp-client" }
config-loader = { path = "../../crates/config-loader" }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tower-http = { version = "0.6", features = ["fs"] }
hindsight-client = { path = "../../crates/hindsight-client" }
portal-registry = { path = "../../crates/portal-registry" }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
async-trait = "0.1"
chrono = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
config-embed-build = { path = "../../crates/config-embed-build" }
