[package]
name = "light-coding-agent-fixture"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
coding-agent-runtime = { path = "../../crates/coding-agent-runtime" }
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile = "3"
