[package]
name = "light-gateway"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"

[dependencies]
agent-delegation = { path = "../../crates/agent-delegation" }
llm-gateway = { path = "../../crates/llm-gateway" }
light-runtime = { path = "../../crates/light-runtime" }
light-pingora = { path = "../../frameworks/light-pingora" }
config-loader = { path = "../../crates/config-loader" }
anyhow = { workspace = true }
arc-swap = "1.7"
async-trait = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
pingora = { version = "0.8.0", features = ["proxy", "rustls"] }
rustls-pemfile = "2.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true }
portal-registry = { path = "../../crates/portal-registry" }
tempfile = "3"
tokio-tungstenite = { version = "0.24" }

[build-dependencies]
config-embed-build = { path = "../../crates/config-embed-build" }
