[package]
name="light-github-action-provider"
version.workspace=true
edition.workspace=true
license.workspace=true

[dependencies]
anyhow.workspace=true
axum.workspace=true
chrono.workspace=true
hex.workspace=true
hmac.workspace=true
futures-util.workspace=true
execution-fixed-action={path="../../crates/execution-fixed-action"}
execution-security={path="../../crates/execution-security"}
reqwest.workspace=true
rusqlite={version="0.32",features=["bundled"]}
serde.workspace=true
serde_json.workspace=true
sha2.workspace=true
tokio.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
uuid.workspace=true
[dev-dependencies]
tempfile="3"
