[package]
name = "light-workflow-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-runtime-protocol = { path = "../../crates/agent-runtime-protocol" }
agent-core = { path = "../../crates/agent-core" }
async-trait.workspace = true
base64 = "0.22"
axum.workspace = true
chrono.workspace = true
dashmap = "6"
execution-backend = { path = "../../crates/execution-backend" }
execution-backend-mock = { path = "../../crates/execution-backend-mock" }
execution-backend-cube = { path = "../../crates/execution-backend-cube" }
execution-backend-oci = { path = "../../crates/execution-backend-oci" }
execution-runner-protocol = { path = "../../crates/execution-runner-protocol" }
futures-util.workspace = true
hex.workspace = true
http = "1"
light-runtime = { path = "../../crates/light-runtime" }
immutable-package = { path = "../../crates/immutable-package" }
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
