[package]
name = "light-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
workflow-core = { path = "../../crates/workflow-core" }
light-rule = { path = "../../crates/light-rule" }
sqlx = { version = "0.8", features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
regex = "1"
