[package]
name = "light-workflow"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
workflow-core = { path = "../../crates/workflow-core" }
light-rule = { path = "../../crates/light-rule" }
light-runtime = { path = "../../crates/light-runtime" }
execution-runner-protocol = { path = "../../crates/execution-runner-protocol" }
execution-fixed-action = { path = "../../crates/execution-fixed-action" }
execution-security = { path = "../../crates/execution-security" }
workflow-policy = { path = "../../crates/workflow-policy" }
model-provider = { path = "../../crates/model-provider" }
object_store = { version = "0.12.4", features = ["aws"] }
sqlx = { version = "0.8", features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
regex = "1"
