[package]
name = "llm-provider-mock"
default-run = "llm-provider-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-stream = "0.3"
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
