[package]
name = "agent-delegation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
