[package]
name = "agent-runtime-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
chrono = { workspace = true }
execution-runner-protocol = { path = "../execution-runner-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
