[package]
name = "config-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
symmetric-decryptor = { path = "../symmetric-decryptor" }
asymmetric-decryptor = { path = "../asymmetric-decryptor" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
arc-swap = "1"
regex = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
base64 = "0.22"
toml = "0.8"
