[package]
name = "config-loader"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
symmetric-decryptor = { path = "../symmetric-decryptor" }
asymmetric-decryptor = { path = "../asymmetric-decryptor" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
arc-swap = "1"
regex = "1"
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
toml = "0.8"

[dev-dependencies]
aes = "0.8"
cbc = "0.1"
hex = "0.4"
pbkdf2 = "0.12"
sha2 = "0.10"
