[package]
name = "controller-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Versioned, transport-neutral controller wire profiles"
repository.workspace = true

[dependencies]
rkyv = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", default-features = false }

[dev-dependencies]
serde = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
