[package]
name = "execution-backend-mock"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
execution-backend = { path = "../execution-backend" }
execution-runner-protocol = { path = "../execution-runner-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
