[package]
name = "execution-runner-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Origin-neutral execution runner wire contracts"

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
