[package]
name = "light-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
