[package]
name = "light-rule"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
evalexpr = "11.0"
thiserror = "2.0"
tracing = "0.1"
