[package]
name = "light-rule"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
evalexpr = "11.0"
thiserror = "2.0"
tracing = "0.1"
