[package]
name = "light-rule"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
evalexpr = "11.0"
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1"
