[package]
name = "light-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config-loader = { path = "../config-loader" }
portal-registry = { path = "../portal-registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
tracing = "0.1"
url = "2"
async-trait = "0.1"
base64 = "0.22"
anyhow = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
