[package]
name = "light-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
config-loader = { path = "../config-loader" }
portal-registry = { path = "../portal-registry" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
anyhow = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
