[package]
name = "light-security"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jsonwebtoken = "9.3"
light-client = { path = "../light-client" }
light-runtime = { path = "../light-runtime" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
