[package]
name = "llm-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1.7"
async-stream = "0.3"
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
model-provider = { path = "../model-provider" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
axum.workspace = true
tempfile = "3"
