[package]
name = "mcp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for Light-RS"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
